--- a/client/templates/guests/modalEditUser.html
+++ b/client/templates/guests/modalEditUser.html
@@ -8,7 +8,7 @@
                 </div>
                 <div class="modal-body">
 							<div class="row text-center extra-spacing-top">
-					        <div class="col-sm-6">
+					        <div class="col-sm-6 col-md-6">
 						        <div class="team-member">
 							        <div class="imgBlock">
 							    
@@ -27,11 +27,11 @@
 							        </div>
 						        </div>
 				            </div>
-							<div class="col-sm-6">
+							<div class="col-sm-6 col-md-6">
 						        <div class="team-member">
 							        
 								    <div class="form-group">
-                                        <div class="col-sm-10">
+                                        <div class="col-sm-10 col-md-10">
             	                            <form id="userEdit">
 	                                            <input type="text" style="width:100%;" class="form-control" id="userNameEdit" name="userNameEdit" value="{{edit.profile.firstName}}" placeholder="">
 												<input type="text" style="width:100%;margin-top:5px;" class="form-control" id="userLastNameEdit" name="userLastNameEdit" value="{{edit.profile.lastName}}" placeholder="">
