--- a/client/templates/guests/modalUserContact.html
+++ b/client/templates/guests/modalUserContact.html
@@ -27,7 +27,7 @@
 							{{#each userContactPrev}}
 							    
 							    <div class="row text-center extra-spacing-top">
-					                <div class="col-sm-6">
+					                <div class="col-sm-6 col-md-6">
 						                <div class="team-member">
 							                <div class="imgBlock">
 							                 
@@ -47,7 +47,7 @@
 							                </div>
 						                </div>
 				                    </div>
-							        <div class="col-sm-6">
+							        <div class="col-sm-6 col-md-6">
 						                <div class="team-member">
 							                <h4>{{profile.firstName}}&nbsp;&nbsp;{{profile.lastName}}</h4>
 							                <p class="text-muted">{{profile.position}}</p>
