--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -1956,23 +1956,26 @@ a.follow-linkedin:hover {
 .imgBlock{
 	position:relative;
 	height:200px;
-	width:175px;
+	width:170px;
 	overflow:hidden;
 	margin:0 auto;
 }
 .imgBlock img{
 	display: block;
     max-width: none;
-	min-height:200px;
 
 }
 
 .col-sm-6 img {
 	display:block;
-	position:relative;
-	height:auto;
-	width:110%;
-	margin:0 -5%;
+	position:absolute;
+	width:auto;
+	min-width:100%;
+	height:100%;
+	min-height:auto;
+	top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .hoverOver{
