--- a/client/templates/header_footer/_footer.html
+++ b/client/templates/header_footer/_footer.html
@@ -8,9 +8,9 @@
                     <hr class="footer-hr">
                     </div>
                     <div class="footer-hosts">
-                        <a href="www.uzh.ch"><img class="hosts-thumbnail" src="img/logo_uni_zuerich.png" alt="University of Zurich"></a>
-                        <a href="www.uibk.ac.at"><img class="hosts-thumbnail-innsbruck" src="img/logo_uni_innsbruck.png" alt="University of Innsbruck"></a>
-                        <a href="www.ox.ac.uk"><img class="hosts-thumbnail" src="img/logo_uni_oxford.png"></a>
+                        <a href="http://www.business.uzh.ch/en/professorships/om.html"><img class="hosts-thumbnail" src="img/logo_uni_zuerich.png" alt="University of Zurich"></a>
+                        <a href="http://www.sbs.ox.ac.uk/community/people/richard-whittington"><img class="hosts-thumbnail-innsbruck" src="img/logo_uni_innsbruck.png" alt="University of Innsbruck"></a>
+                        <a href="https://www.uibk.ac.at/iol/organisation/team/leonhard-dobusch/leonhard_dobusch.html.de"><img class="hosts-thumbnail" src="img/logo_uni_oxford.png"></a>
                     </div>
                 </div>
                 <div class="col-sm-4 col-xs-12 text-center">
