Changed follow us on Facebook link

--- a/client/templates/guests/home.html
+++ b/client/templates/guests/home.html
@@ -11,7 +11,7 @@
                         <button type="button" class="btn btn-primary btn-xl page-scroll js-join btn-joinus">JOIN US</button>                 <!-- Social Media Bar -->
                         FOLLOW US:
                         <!-- Facebook Share Button -->
-                        <a class="follow-facebook" href="https://www.facebook.com/sharer/sharer.php?u=url"><i class="fa some fa-facebook-official"></i></a>
+                        <a class="follow-facebook" href="https://www.facebook.com/openstrategynetwork/"><i class="fa some fa-facebook-official"></i></a>
                         <!-- Twitter Share Button -->
                         <a class="follow-twitter" href="https://twitter.com/OpenStrategyNet"><i class="fa some fa-twitter"></i></a>
                         <!-- RSS Share Button -->
