--- a/client/templates/header_footer/_footer.html
+++ b/client/templates/header_footer/_footer.html
@@ -20,7 +20,7 @@
                     <div class="share-button sharer" style="display: block;">
                         <div class="social top center networks-5 ">
                             <!-- Facebook Share Button -->
-                            <a class="follow-facebook" href="https://www.facebook.com/sharer/sharer.php?u=url"><i class="fa some fa-facebook-official"></i></a>
+                            <a class="follow-facebook" href="https://www.facebook.com/openstrategynetwork/"><i class="fa some fa-facebook-official"></i></a>
 
                             <!-- Google Plus Share Button -->
                             <!-- <a class="fbtn share gplus" href="https://plus.google.com/share?url=url"><i class="fa fa-google-plus"></i></a> -->
