Added link input field to Publications

--- a/client/templates/admin/admin-publications-edit.html
+++ b/client/templates/admin/admin-publications-edit.html
@@ -127,6 +127,13 @@
           </div>
         </div>
         {{/if}}
+
+        <div class="form-group">
+          <label for="pages" class="col-sm-2 control-label">Link</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="link" value="{{link}}" name="pages" placeholder="Enter an external URL for more information">
+          </div>
+        </div>
         
         {{#if attachmentExists}}
          <div class="form-group">
