--- a/client/templates/admin/admin-publications.html
+++ b/client/templates/admin/admin-publications.html
@@ -142,6 +142,13 @@
      </div>
 
       <div class="form-group">
+        <label for="pages" class="col-sm-2 control-label">Link</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="link" name="pages" placeholder="Enter an external URL for more information">
+        </div>
+      </div>
+
+      <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <button type="submit" id="js-addEntry" class="btn btn-primary extra-spacing-bottom">ADD ENTRY</button>
         </div>
