bibliography: bug fix in search results

--- a/client/templates/members/bibliographyMembers.html
+++ b/client/templates/members/bibliographyMembers.html
@@ -119,7 +119,7 @@
 									</ul>
 
 								</td>
-								<td><a class="tbody-link" href="{{pathFor route = 'newsAndEventsPage'}}">{{title}}</a></td>
+								<td><a class="tbody-link" href="{{pathFor route = 'bibliographyPage'}}">{{title}}</a></td>
 								{{#if outlet}}
 								<td>{{outlet}}</td>
 								{{else}}
