New class: contact-edit added.

--- a/client/templates/guests/contact.html
+++ b/client/templates/guests/contact.html
@@ -28,7 +28,7 @@
 
 				    {{#each toUserContact}}
 					<center>
-					<div style="margin-top:5px;height:350px;" class="col-sm-6">
+					<div style="margin-top:5px;height:350px;" class="col-sm-6 contact-edit">
 						<div class="team-member">
 						    <div class="contact-thumbnail">
                                 <div class="testing">
@@ -85,7 +85,7 @@
 					{{/each}}
 
                     {{#if noAdmin true}}
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 contact-edit">
 						    <div class="team-member">
 
 						        <center>
