--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -1510,6 +1510,8 @@ th.table-buttons {
 
 //Layer Log in
 
+//Layer Log in
+
 .overlay {
 		position: relative;
 }
@@ -1889,6 +1891,7 @@ a.profile-links.icon {
 
 
 // Footer
+// Checked
 
 footer {
 		padding: 0px 15 15px 0;
@@ -1920,20 +1923,12 @@ h3.footer-head {
         color: black;
 }
 
-.footer-hosts {
-    display: block;
-}
 
 .copyright {
+		padding: 8px 0 8px 0;
+		// background-color: #000;
 		font-size: 13px;
 		color: #000000;
-}
-
-@media(max-width:767px) {
-    .copyright {
-        padding-top: 20px;
-        text-align: center;
-    }
 }
 
 a.footer-link {
@@ -2080,6 +2075,14 @@ a.follow-linkedin:hover {
 
 .col-sm-6 img {
 	display:block;
+	position:relative;
+	height:auto;
+	width:110%;
+	margin:0 -5%;
+}
+
+.col-sm-6 contact-edit img {
+	display:block;
 	position:absolute;
 	width:auto;
 	min-width:100%;
@@ -2107,17 +2110,5 @@ a.follow-linkedin:hover {
 
 .at-form {
     margin: -20px 0 0 0;
-}
-
-.btn-newsletter {
-    margin-left: 8px;
-}
-
-@media (max-width: 420px) {
-    .btn-newsletter {
-        margin-left: 0;
-        margin-top: 15px;
-        margin-right: 15px;
-    }
 }
 //end
