added change password

--- a/client/templates/members/profileSettings.html
+++ b/client/templates/members/profileSettings.html
@@ -54,7 +54,7 @@
 								<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
 										<div class="form-group">
 												<label for="current-password">Current Password*</label>
-												<input type="current-password" class="form-control" id="current-password" placeholder="Current Password">
+												<input type="password" class="form-control" id="current-password" placeholder="Current Password">
 										</div>
 								</div>
 						</div>
@@ -71,7 +71,7 @@
 								<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
 										<div class="form-group">
 												<label for="new-password">New Password*</label>
-												<input type="new-password" class="form-control" id="new-password" placeholder="New Password">
+												<input type="password" class="form-control" id="new-password" placeholder="New Password">
 										</div>
 								</div>
 						</div>
@@ -80,7 +80,7 @@
 								<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
 										<div class="form-group">
 												<label for="confirm-password">Confirm new Password*</label>
-												<input type="confirm-password" class="form-control" id="confirm-password" placeholder="Confirm new Password">
+												<input type="password" class="form-control" id="confirm-password" placeholder="Confirm new Password">
 										</div>
 								</div>
 						</div>
@@ -88,7 +88,7 @@
 						<div class="row">
 								<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
 										<div class="form-group">
-												<button type="submit" class="btn btn-primary extra-spacing-bottom">SAVE CHANGES</button>
+												<button type="submit" id="security" class="btn btn-primary extra-spacing-bottom">SAVE CHANGES</button>
 										</div>
 								</div>
 						</div>
@@ -108,7 +108,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                     <div class="form-group">
                         <label for="membername">Member Name*</label>
-                        <input type="firstname" class="form-control" id="firstname" value="{{profile.firstName}}" placeholder="First Name">
+                        <input type="text" class="form-control" id="firstname" value="{{profile.firstName}}" placeholder="First Name">
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                     <div class="form-group">
-                        <input type="lastname" class="form-control" value="{{profile.lastName}}" id="lastname" placeholder="Last Name">
+                        <input type="text" class="form-control" value="{{profile.lastName}}" id="lastname" placeholder="Last Name">
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                     <div class="form-group">
                         <label for="institution">Institution/Company*</label>
-                        <input type="institution" class="form-control" value="{{profile.institution}}" id="institution" placeholder="Institution or Company">
+                        <input type="text" class="form-control" value="{{profile.institution}}" id="institution" placeholder="Institution or Company">
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                     <div class="form-group">
                         <label for="interests">Interests regarding Open Strategy* <span class="badge grey-tooltip" data-toggle="tooltip" title="Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa." data-placement="bottom" href="#">?</span></label>
-                        <input type="interests" class="form-control" value="{{profile.interests}}" id="interests" placeholder="Interests regarding Open Strategy">
+                        <input type="text" class="form-control" value="{{profile.interests}}" id="interests" placeholder="Interests regarding Open Strategy">
                     </div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                     <div class="form-group">
                         <label for="position">Position</label>
-                        <input type="position" value="{{profile.position}}" class="form-control" id="position" placeholder="Position">
+                        <input type="text" value="{{profile.position}}" class="form-control" id="position" placeholder="Position">
                   </div>
                 </div>
             </div>
@@ -311,7 +311,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary extra-spacing-bottom">SAVE CHANGES</button>
+                        <button type="submit" id="security" class="btn btn-primary extra-spacing-bottom">SAVE CHANGES</button>
                     </div>
                 </div>
             </div>
