Changed Buttons News&Bibliography page in small and Style Social-Icons Stage

--- a/client/templates/guests/newsEventsPage.html
+++ b/client/templates/guests/newsEventsPage.html
@@ -13,8 +13,8 @@
 					<div class="row">
 							<!-- Back-Button 1 -->
 							<div class="col-sm-2 col-sm-offset-1 col-xs-12 js-back">
-									<div class="btn btn-primary btn-icon">
-											<span class="glyphicon glyphicon-circle-arrow-left"></span> BACK
+									<div class="btn btn-primary btn-sm" alt="back">
+											<span class="glyphicon glyphicon-circle-arrow-left"></span>
 									</div>
 							</div>
 							<!-- Info -->
@@ -32,9 +32,9 @@
 							<!-- ./ Info-->
 							<!-- Back-Button 2 -->
 							<div class="col-sm-2 col-sm-offset-1 col-xs-12">
-									<div class="btn btn-primary btn-icon js-back">
-											<span class="glyphicon glyphicon-circle-arrow-left"></span> BACK
-									</div>
+                                <div class="btn btn-primary btn-sm btn-back" alt="back">
+                                        <span class="glyphicon glyphicon-circle-arrow-left"></span>
+                                </div>
 							</div>
 					</div>
 			</div>
