--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -186,9 +186,15 @@ a.breadcrumb-content-link:hover {
 		}
 }
 
-@media (max-width: 768px) {
+@media (max-width: 720px) {
     .breadcrumb-content {
-        margin-top: 55px;
+        margin-top: 87px!important;
+    }
+}
+
+@media (max-width: 910px) {
+    .breadcrumb-content {
+        margin-top: 87px!important;
     }
 
 }
@@ -377,6 +383,14 @@ a.active {
     display: inline-block;
 }
 
+@media (min-width: 640px) {
+    .btn-back {
+        display: none;
+    }
+}
+
+
+
 .uploadInput-text {
     margin-top: -1px;
 }
@@ -494,7 +508,7 @@ aside {
 // Custom Navigation Bar
 
 
-@media (max-width: 827px) {
+@media (max-width: 910px) {
 
 		.navbar-header {
 				float: none;
@@ -1313,10 +1327,11 @@ ul.list-inline.social-buttons {
 		padding: -2px 8px 0px 4px;
 }
 
-/*.glyphicon-circle-arrow-left {
-		padding: 0px 8px 0px 4px;
-		font-size: inherit;
-}*/
+.glyphicon-circle-arrow-left {
+    padding: 3px 0px 0px 0px;
+    font-size: 16px;
+}
+
 
 //Table Bibliography
 
