--- a/client/templates/members/bibliographyPage.html
+++ b/client/templates/members/bibliographyPage.html
@@ -13,8 +13,8 @@
 			<div class="row">
 					<!-- Back-Button 1 -->
 					<div class="col-sm-2 col-sm-offset-1 col-xs-12">
-							<button type="button" class="btn btn-primary btn-icon js-back">
-									<span class="glyphicon glyphicon-circle-arrow-left"></span> BACK
+							<button type="button" class="btn btn-primary btn-sm js-back" alt="back">
+									<span class="glyphicon glyphicon-circle-arrow-left"></span>
 							</button>
 					</div>
 					<!-- Abstract -->
@@ -29,9 +29,10 @@
 					</div> <!-- ./Abstract -->
 					<!-- Back-Button 2 -->
 					<div class="col-sm-2 col-sm-offset-1 col-xs-12">
-							<button type="button" class="btn btn-primary btn-icon js-back">
-									<span class="glyphicon glyphicon-circle-arrow-left"></span> BACK
-							</button>
+                        <button type="button" class="btn btn-primary btn-sm btn-back js-back" alt="back">
+                                <span class="glyphicon glyphicon-circle-arrow-left"></span>
+                        </button>
+
 					</div>
 			</div>
 		</div>
