Added sticky footer and <span> to text follow us

--- a/client/templates/guests/home.html
+++ b/client/templates/guests/home.html
@@ -9,7 +9,7 @@
                 <div class="share-button sharer" style="display: block;">
                     <div class="social top center networks-5 ">
                         <button type="button" class="btn btn-primary btn-xl page-scroll js-join btn-joinus">JOIN US</button>                 <!-- Social Media Bar -->
-                        FOLLOW US:
+                        <span>FOLLOW US:</span>
                         <!-- Facebook Share Button -->
                         <a class="follow-facebook" href="https://www.facebook.com/openstrategynetwork/"><i class="fa some-header fa-facebook-official"></i></a>
                         <!-- Twitter Share Button -->
