--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -7,7 +7,23 @@
 html,
 body {
 	overflow-x: hidden;
-		font-family: 'Lato',sans-serif, 'Helvetica Neue', Arial,sans-serif;
+	font-family: 'Lato',sans-serif, 'Helvetica Neue', Arial,sans-serif;
+    height: 100%;
+}
+
+// * {
+// margin: 0;
+// }
+
+.sticky-wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -209px;
+}
+.sticky-footer, .push {
+    height: 209px;
+    clear: both;
 }
 
 small,
@@ -2126,4 +2142,6 @@ a.follow-linkedin:hover {
 .at-form {
     margin: -20px 0 0 0;
 }
+
+
 //end
