--- a/client/templates/guests/modalEditUser.html
+++ b/client/templates/guests/modalEditUser.html
@@ -7,31 +7,31 @@
                     <h4 class="modal-title">Edit User Profile</h4>
                 </div>
                 <div class="modal-body">
-							<div class="row text-center extra-spacing-top">
-					        <div class="col-sm-6 col-md-6">
+							<div class="row text-center extra-spacing-top contact-edit-hd">
+					        <div class=" col-xs-6 col-sm-6 col-md-6">
 						        <div class="team-member">
-							        <div class="imgBlock">
+							        <div class="imgBlock wasabi-content">
 							    
 							            <center>
 								            {{#if noPic true}}
-									            <img  src="img/contact-placeholder.jpg" alt="No Profile Photo">
-								        
-									        {{else}}
-									            {{#if normalPic true}}
-							                        <img  src="{{profile.pictureID}}" alt="No Profile Photo">
-									            {{else}}
-									                <img  src="{{profile.picture}}" alt="No Profile Photo">
-									            {{/if}}
+									            <img  src="img/contact-placeholder.jpg" alt="{{edit.profile.firstName}}  {{edit.profile.lastName}}">
+								            {{/if}}
+									              
+									        {{#if normalPic true}}
+							                    <img  src="{{edit.profile.pictureID}}" alt="{{edit.profile.firstName}}  {{edit.profile.lastName}}">
+									        {{/if}}
+									        {{#if socialPic}}
+									            <img  src="{{edit.profile.picture}}" alt="{{edit.profile.firstName}}  {{edit.profile.lastName}}">
 									        {{/if}}
 								        </center>
 							        </div>
 						        </div>
 				            </div>
-							<div class="col-sm-6 col-md-6">
+							<div class="col-xs-6 col-sm-6 col-md-6">
 						        <div class="team-member">
 							        
 								    <div class="form-group">
-                                        <div class="col-sm-10 col-md-10">
+                                        <div class=" col-xs-10 col-sm-10 col-md-10">
             	                            <form id="userEdit">
 	                                            <input type="text" style="width:100%;" class="form-control" id="userNameEdit" name="userNameEdit" value="{{edit.profile.firstName}}" placeholder="">
 												<input type="text" style="width:100%;margin-top:5px;" class="form-control" id="userLastNameEdit" name="userLastNameEdit" value="{{edit.profile.lastName}}" placeholder="">
