--- a/client/templates/header_footer/_header.html
+++ b/client/templates/header_footer/_header.html
@@ -38,7 +38,8 @@
 												<a href="{{pathFor route='contact'}}">Contact</a>
 										</li>
                     {{#unless currentUser}}
-                    <button id="loginButton" class="btn btn-primary btn-login-modal">LOG IN</button>
+                    <li><button id="loginButton" class="btn btn-primary btn-login-modal">LOG IN</button>
+                    </li>
                     {{else}}
                     <li class="dropdown">
                       <a href="#" id="profile-text" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROFILE <span class="caret"></span></a>
