hide LogIn Modal after clicking on REGISTER

--- a/client/templates/header_footer/loginModal.html
+++ b/client/templates/header_footer/loginModal.html
@@ -65,7 +65,7 @@
                     </div>
 
                     <form>
-                          <a href="{{pathFor route='joinUs'}}" class="btn btn-primary btn-block">REGISTER</a>
+                          <a href="{{pathFor route='joinUs'}}" id="modalAnchor" class="btn btn-primary btn-block">REGISTER</a>
                     </form>
                 </div>
             </div>
