--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -1177,7 +1177,7 @@ header .header-content .header-content-inner p {
 
 
 
-
+//Thumbnails
 
 .news-thumbnail {
 		border: none;
@@ -1213,9 +1213,17 @@ header .header-content .header-content-inner p {
 		padding-right: 10px;
 		padding-bottom: 10px;
 }
+.profile-thumbnail {
+		border: none;
+		width: 150px;
+		height: auto;
+		float: left;
+}
 
-
-
+//Hidden content
+.hidden{
+	display:none;
+}
 
 
 
@@ -1622,6 +1630,16 @@ section.layer-login {
 		overflow: hidden;
 		text-overflow: ellipsis;
 		margin: 0;
+}
+
+.btn-editpic{
+	position:absolute;
+	margin-left:70px;
+}
+
+.btn-discardpic{
+	position:absolute;
+	margin-left:112px;
 }
 
 .btn-add>:first-child {
